force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Gestión del stock disponible de productos de IT Solutions.</description>
    <label>Inventory</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>