force-app/main/default/objects/Inventory__c/fields/Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock__c</fullName>
    <description>Unidades disponibles en almacén.</description>
    <label>Available Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>