force-app/main/default/objects/Inventory__c/fields/Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Point__c</fullName>
    <description>Nivel mínimo de stock que dispara una alerta de reposición al Gestor de Inventario.</description>
    <label>Reorder Point</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>