force-app/main/default/objects/Inventory__c/fields/Reserved_Stock__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Stock__c</fullName>
    <description>Unidades reservadas en pedidos pendientes de entrega.</description>
    <label>Reserved Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>