force-app/main/default/objects/Inventory__c/validationRules/Available_Stock_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Stock_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Impide que el stock disponible sea un valor negativo.</description>
    <errorConditionFormula>Available_Stock__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Available_Stock__c</errorDisplayField>
    <errorMessage>El stock disponible no puede ser negativo.</errorMessage>
</ValidationRule>